--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,12 @@
 server:
   port: 8081
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/library_manage_sys
+    username: root
+    password: Hansaja@1234
+
+  jpa:
+    hibernate:
+      ddl-auto: update
